[package]
name = "threev"
description = "3-valued in-memory k-v-v"
version = "0.1.0"
edition = "2021"
keywords = ["db", "databases", "in-memory", "three-value"]
default-run = "threevd"

[[bin]]
name = "threev-cli"
path = "src/bin/threev-cli.rs"
required-features = ["cli"]
doc = false

[[bin]]
name = "threevd"
path = "src/bin/threevd.rs"
required-features = ["cli"]
doc = false

[lib]
name = "threev"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = { version = "3.0.0-rc.4", optional = true }
futures = "0.3.18"
rustyline = { version = "9.1.0", optional  =true }
serde = { version = "1.0.131", features = ["derive"] }
tokio = { version = "1.14.0", features = ["full"] }
threev-derive = { path = "../threev-derive", optional = true }


[features]
default = ["cli"]
cli = ["clap", "rustyline"
 ]
derive = ["threev-derive"]
